2004-06-01  Radek Doulik  <rodo@ximian.com>

	* htmliframe.c (check_page_split): multiply border height by pixel
	size

	* htmltext.c (calc_preferred_width): set self->y so that printing
	is not messed up (wrong return from page_split with invalid text
	objects where ascent > y)

	* htmlobject.c (html_object_check_page_split): added painter
	parameter

	Fixes #59102

2004-05-28  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c: update html_text_calc_text_size calls
	everywhere

	* htmltext.c (html_text_calc_text_size): pass only
	start_byte_offset and calculate the text here. we were sometime
	passing wrong start_byte_offset's. the text and start_byte_offset
	are complimentary
	update html_text_calc_text_size calls everywhere

	* htmlprinter.c (text_size): use iterator for all glyph strings,
	not just 1st one
	(text_size): process extra item attrs after passed attrs are
	processed so that links fg color is not lost
	(text_size): ditto
	(alloc_font): set italic to TRUE or FALSE, libgnomeprint now acts
	differently

	* htmltextslave.c (draw_normal): fixed end_index calculation for
	printer painter

2004-05-27  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (text_size): use double for width calculation to
	avoid numeric errors
	(draw_text): ditto

	* htmltextslave.c (update_lb): calculate the printer width the
	same way as for gdk painters
	(hts_fit_line): ditto

	* htmlpainter.h: removed color set from painter, we now use only
	the global one from engine. having own sets in painters caused a
	lot of pain by having to update those when global one
	updated. there were still problems with it (wrong selection color
	in test editor when switched to plain text mode and probably few
	more). updated everywhere the color set usage

	Might fix #58828

2004-05-26  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_op_copy_helper): update spell errors

	Fixes #50829

2004-05-25  Radek Doulik  <rodo@ximian.com>
