@@ -4944,9 +4944,13 @@ add_bindings (GtkHTMLClass *klass)
 	BMOVE (0, KP_Page_Down,  DOWN, PAGE);
 
 	BMOVE (0, Home, LEFT, ALL);
+	BMOVE (0, KP_Home, LEFT, ALL);
 	BMOVE (0, End, RIGHT, ALL);
+	BMOVE (0, KP_End, RIGHT, ALL);
 	BMOVE (GDK_CONTROL_MASK, Home, UP, ALL);
+	BMOVE (GDK_CONTROL_MASK, KP_Home, UP, ALL);
 	BMOVE (GDK_CONTROL_MASK, End, DOWN, ALL);
+	BMOVE (GDK_CONTROL_MASK, KP_End, DOWN, ALL);
 
 #define BCOM(m,key,com) \
 	gtk_binding_entry_add_signal (binding_set, GDK_ ## key, m, \
@@ -4985,9 +4989,13 @@ add_bindings (GtkHTMLClass *klass)
 	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, Left, MODIFY_SELECTION_PREV_WORD);
 	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, Right, MODIFY_SELECTION_NEXT_WORD);
 	BCOM (GDK_SHIFT_MASK, Home, MODIFY_SELECTION_BOL);
+	BCOM (GDK_SHIFT_MASK, KP_Home, MODIFY_SELECTION_BOL);
 	BCOM (GDK_SHIFT_MASK, End, MODIFY_SELECTION_EOL);
+	BCOM (GDK_SHIFT_MASK, KP_End, MODIFY_SELECTION_EOL);
 	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, Home, MODIFY_SELECTION_BOD);
+	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, KP_Home, MODIFY_SELECTION_BOD);
 	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, End, MODIFY_SELECTION_EOD);
+	BCOM (GDK_SHIFT_MASK | GDK_CONTROL_MASK, KP_End, MODIFY_SELECTION_EOD);
 	BCOM (GDK_SHIFT_MASK, Page_Up, MODIFY_SELECTION_PAGEUP);
 	BCOM (GDK_SHIFT_MASK, Page_Down, MODIFY_SELECTION_PAGEDOWN);
 	BCOM (GDK_SHIFT_MASK, KP_Page_Up, MODIFY_SELECTION_PAGEUP);
